# innobid-ai-agents

./: README.md  pyproject.toml
db/: chroma.sqlite3
src/innobid_ai_agent/: crew.py  main.py
src/innobid_ai_agent/config/: agents.yaml  tasks.yaml
src/innobid_ai_agent/tools/: DocumentReader.py  custom_tool.py
